--- a/jwto.opam
+++ b/jwto.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "JWTo"
+name: "jwto"
 synopsis: "JWT encoding, decoding and verification"
 version: "0.2.0"
 authors: "Sebastian Porto"
